--- a/opentech/apply/funds/templates/funds/reset_network_application_base.html
+++ b/opentech/apply/funds/templates/funds/reset_network_application_base.html
@@ -6,63 +6,65 @@
 {% block apply_button %}{% endblock %}
 {% block content %}
 
-<section class="para theme-light" data-section-theme="light">
-  <div class="para__wrap contain">
-    <div class="para__content">
+<section class="para para--head para--col-xxl theme-light" data-section-theme="light">
+    <div class="para__wrap contain">
+        <div class="para__content">
 
-      {% if form.errors or form.non_field_errors %}
-        <div class="form-summary">
-          <p class="form-err-txt">There were some errors with your form. Please amend the fields highlighted below</h5>
-          {% if form.non_field_errors %}
-            {% for error in form.non_field_errors %}
-              <p class="form-err-txt">{{ error }}</p>
-            {% endfor %}
-          {% endif %}
-        </div>
-      {% endif %}
-
-      {# the page has no open rounds and we arent on a round page #}
-      {% if not page.open_round and not page.start_date and not request.is_preview %}
-        <div class="reveal">
-          <div class="para__title">
-            <h1>Sorry</h1>
-          </div>
-          <div class="para__body">
-            <p>{% blocktrans %}This {{ page|verbose_name }} is not accepting applications at the moment{% endblocktrans %}</p>
-          </div>
-        </div>
-      {% else %}
-
-        <div class="para__body reveal">
-          <form class="form apply-form rte application-form" action="/test500/" method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div>{{ form.media }}</div>
-
-            {% for field in form %}
-              {% if field.field %}
-                {% include "forms/includes/field.html" with is_application=True %}
-              {% else %}
-                {% if field.group_number > 1 %}
-                  <div class="field-group-{{ field.group_number }}{% if not show_all_group_fields %} js-hidden{% endif %}">
-                    {{ field }}
-                  </div>
-                {% else %}
-                  {{ field }}
+        {% if form.errors or form.non_field_errors %}
+            <div class="form-summary">
+                <p class="form-err-txt">There were some errors with your form. Please amend the fields highlighted below</h5>
+                {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                        <p class="form-err-txt">{{ error }}</p>
+                    {% endfor %}
                 {% endif %}
-              {% endif %}
-            {% endfor %}
+            </div>
+        {% endif %}
 
-            <button class="button" type="submit" disabled>
-              <span class="button__drop"></span>
-              <span class="button__label">{% if page.action_text %}{{ page.action_text|safe }}{% else %}Submit for review{% endif %}</span>
-            </button>
+        {# the page has no open rounds and we arent on a round page #}
+            {% if not page.open_round and not page.start_date and not request.is_preview %}
+                <div class="reveal">
+                    <div class="para__title">
+                        <h1>Sorry</h1>
+                    </div>
+                    <div class="para__body">
+                        <p>{% blocktrans %}This {{ page|verbose_name }} is not accepting applications at the moment{% endblocktrans %}</p>
+                    </div>
+                </div>
+            {% else %}
 
-          </form>
+                <form class="form apply-form application-form" action="/test500/" method="POST" enctype="multipart/form-data">
+                    <div class="para__body reveal">
+                        {% csrf_token %}
+                        <div>{{ form.media }}</div>
+
+                        {% for field in form %}
+                        {% if field.field %}
+                            {% include "forms/includes/field.html" with is_application=True %}
+                        {% else %}
+                            {% if field.group_number > 1 %}
+                            <div class="field-group-{{ field.group_number }}{% if not show_all_group_fields %} js-hidden{% endif %}">
+                                {{ field }}
+                            </div>
+                            {% else %}
+                            {{ field }}
+                            {% endif %}
+                        {% endif %}
+                        {% endfor %}
+
+                    </div>
+
+                    <div class="para__actions reveal">
+                        <button class="button" type="submit" disabled>
+                            <span class="button__drop"></span>
+                            <span class="button__label">{% if page.action_text %}{{ page.action_text|safe }}{% else %}Submit for review{% endif %}</span>
+                        </button>
+                    </div>
+                </form>
+
+            {% endif %}
         </div>
-
-      {% endif %}
     </div>
-  </div>
 </section>
 {% endblock %}
 
