--- a/opentech/apply/funds/templates/funds/reset_network_application_base_landing.html
+++ b/opentech/apply/funds/templates/funds/reset_network_application_base_landing.html
@@ -3,7 +3,7 @@
 {% block body_class %}base-light{% endblock %}
 {% block content %}
 
-<section class="para theme-light" data-section-theme="light">
+<section class="para para--head para--col-xxl theme-light" data-section-theme="light">
   <div class="para__wrap contain">
     <div class="para__content">
       <div class="reveal">
