--- a/opentech/apply/users/templates/users/password_reset/reset_network_confirm.html
+++ b/opentech/apply/users/templates/users/password_reset/reset_network_confirm.html
@@ -5,7 +5,7 @@
 {% block page_title %}{{ title }}{% endblock %}
 {% block content %}
 
-<section class="para theme-dark" data-section-theme="dark">
+<section class="para para--login theme-dark" data-section-theme="dark">
   <div class="para__wrap contain reveal">
     <div class="para__content">
       <div class="para__title">
