--- a/opentech/templates/reset_network/base.html
+++ b/opentech/templates/reset_network/base.html
@@ -15,7 +15,7 @@
     <meta name="twitter:title" content="{% firstof page.seo_title page.title %}" />
     <meta name="twitter:description" content="{% firstof page.social_text settings.utils.SocialMediaSettings.default_sharing_text %}">
     {% if page.social_image %}
-    <meta name="twitter:image" content="{{ request.site.root_url }}{{ social_img.url }}">
+    <meta name="twitter:image" content="{{ social_img.url }}">
     {% endif %}
 
     {% if settings.utils.SocialMediaSettings.facebook_app_id %}
@@ -25,7 +25,7 @@
     <meta property="og:url" content="{{ page.url }}" />
     <meta property="og:title" content="{% firstof page.seo_title page.title %}" />
     {% if page.social_image %}
-    <meta property="og:image" content="{{ request.site.root_url }}{{ social_img.url }}" />
+    <meta property="og:image" content="{{ social_img.url }}" />
     {% endif %}
     <meta property="og:description" content="{% firstof page.social_text settings.utils.SocialMediaSettings.default_sharing_text %}" />
     <meta property="og:site_name" content="{{ settings.utils.SocialMediaSettings.site_name }}" />
